# Raspberry-camera-project

./: .gitignore
02_source_code/: CMakeLists.txt  toolchain.cmake
02_source_code/app/: CMakeLists.txt  button_handler.cpp  button_handler.h  main.cpp  main.h
02_source_code/app/utils/: CMakeLists.txt  delay.h  settings.cpp  settings.h
02_source_code/middleware/: CMakeLists.txt
02_source_code/middleware/camera/: CMakeLists.txt  camera_control.cpp  camera_control.h
02_source_code/middleware/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
02_source_code/middleware/gui/: CMakeLists.txt
02_source_code/middleware/logging/: CMakeLists.txt  log.cpp  log.h
02_source_code/middleware/storage/: CMakeLists.txt
02_source_code/tools/: build.sh
02_source_code/tools/cross-pi-gcc-10.2.0-32/arm-linux-gnueabihf/lib/: libasan.la  libasan.so.6.0.0  libatomic.so.1.2.0  libgcc_s.so.1  libgfortran.so.5.0.0  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.la  libssp.so.0.0.0  libssp_nonshared.la  libstdc++.la  libstdc++.so.6.0.28-gdb.py  libubsan.la  libubsan.so.1.0.0
02_source_code/tools/cross-pi-gcc-10.2.0-32/lib/: libcc1.so.0.0.0
02_source_code/tools/cross-pi-gcc-10.2.0-32/share/info/: dir  gdb.info
02_source_code/tools/sysroot/: libarmadillo.so.10.1.2  libdfalt.so.0.0.0  libvpf.so.4
02_source_code/tools/sysroot/arm-linux-gnueabihf/: libEGL_mesa.so.0.0.0  libGLX_mesa.so.0.0.0  libQt5EglFsKmsSupport.so.5.15.2  libQt5Network.so.5.15.2  libQt5XcbQpa.so.5.15.2  libXpm.so.4.11.0  libaec.so.0.0.10  libarchive.so.13.4.3  libavdevice.so.58.10.100  libavresample.so.4.0.0  libavutil.so.56.51.100  libboost_atomic.so.1.74.0  libboost_serialization.so.1.74.0  libboost_system.so.1.74.0  libboost_wserialization.so.1.74.0  libcamera.so.0.0.5  libcfitsio.so.9.3.49  libcurl-gnutls.so.4.7.0  libcurl.so.4.7.0  libdapclient.so.6.1.11  libdcerpc-binding.so.0.0.1  libdtovl.so.0  libevent_extra-2.1.so.7.0.1  libevent_openssl-2.1.so.7.0.1  libevent_pthreads-2.1.so.7.0.1  libexpatw.so.1.6.12  libext2fs.so.2.4  libform.so.6.2  libformw.so.6.2  libfyba.so.0.0.0  libfyut.so.0.0.0  libgdcmCommon.so.3.0  libgdcmCommon.so.3.0.8  libgdcmDICT.so.3.0.8  libgdcmDSED.so.3.0  libgdcmDSED.so.3.0.8  libgdcmIOD.so.3.0  libgdcmMEXD.so.3.0  libgdcmjpeg12.so.3.0  libgdcmjpeg12.so.3.0.8  (+130 more)
02_source_code/tools/sysroot/arm-linux-gnueabihf/gdcm-3.0/: GDCMConfig.cmake
02_source_code/tools/sysroot/arm-linux-gnueabihf/glib-2.0/: glib-compile-schemas
02_source_code/tools/sysroot/arm-linux-gnueabihf/libcamera/: ipa_vimc.so.sign
02_source_code/tools/sysroot/arm-linux-gnueabihf/mutter-7/: libmutter-clutter-7.so.0.0.0  libmutter-cogl-pango-7.so.0.0.0
02_source_code/tools/sysroot/arm-linux-gnueabihf/nss/: libfreebl3.chk  libnssdbm3.chk  libsoftokn3.chk
02_source_code/tools/sysroot/arm-linux-gnueabihf/pkgconfig/: IlmBase.pc  libavcodec.pc  libavfilter.pc  libavutil.pc  libcamera-base.pc  libevent_core.pc  libevent_pthreads.pc  libexif.pc  liblzma.pc  libpostproc.pc  libraw1394.pc  libswscale.pc  opencv4.pc  tbb.pc
02_source_code/tools/sysroot/arm-linux-gnueabihf/samba/: libCHARSET3.so.0  libMESSAGING-SEND.so.0  libads.so.0  libasn1util.so.0  libauth4.so.0  libauthkrb5.so.0  libcli-ldap.so.0  libcli-nbt.so.0  libcli-smb-common.so.0  libclidns.so.0  libcommon-auth.so.0  libdbwrap.so.0  libdfs-server-ad.so.0  libdsdb-garbage-collect-tombstones.so.0  libdsdb-module.so.0  libevents.so.0  libflag-mapping.so.0  libgpext.so.0  libgse.so.0  libgssapi-samba4.so.2.0.0  libhcrypto-samba4.so.5.0.1  libheimbase-samba4.so.1.0.0  libheimntlm-samba4.so.1.0.1  libldbsamba.so.0  liblibcli-lsa3.so.0  liblibsmb.so.0  libmsrpc3.so.0  libnet-keytab.so.0  libnss-info.so.0  libposix-eadb.so.0  libregistry.so.0  libroken-samba4.so.19.0.1  libsamba-modules.so.0  libsamba-security.so.0  libsamba3-util.so.0  libscavenge-dns-records.so.0  libserver-role.so.0  libshares.so.0  libsmbclient-raw.so.0  libsmbd-shim.so.0  (+7 more)
02_source_code/tools/sysroot/arm-linux-gnueabihf/vlc/: vlc-cache-gen
02_source_code/tools/sysroot/arm-linux-gnueabihf/webkit2gtk-4.0/: WebKitNetworkProcess  WebKitWebProcess
02_source_code/tools/sysroot/cups/backend/: ipp
02_source_code/tools/sysroot/cups/daemon/: cups-exec
02_source_code/tools/sysroot/cups/filter/: foomatic-rip  gstoraster  imagetoraster
02_source_code/tools/sysroot/cups/notifier/: mailto
02_source_code/tools/sysroot/dbus-1.0/: dbus-daemon-launch-helper
02_source_code/tools/sysroot/git-core/: git-http-fetch  git-http-push
02_source_code/tools/sysroot/openssh/: sftp-server  ssh-keysign  ssh-sk-helper
02_source_code/tools/sysroot/python3.9/config-3.9-arm-linux-gnueabihf/: Makefile
02_source_code/tools/sysroot/python3.9/urllib/: parse.py
02_source_code/tools/sysroot/systemd/: systemd  systemd-ac-power  systemd-backlight  systemd-bless-boot  systemd-cgroups-agent  systemd-cryptsetup  systemd-fsck  systemd-fsckd  systemd-growfs  systemd-hostnamed  systemd-initctl  systemd-makefs  systemd-modules-load  systemd-networkd  systemd-networkd-wait-online  systemd-remount-fs  systemd-resolved  systemd-shutdown  systemd-sleep  systemd-socket-proxyd  systemd-time-wait-sync  systemd-timedated  systemd-timesyncd  systemd-update-utmp  systemd-volatile-root  systemd-xdg-autostart-condition
02_source_code/tools/sysroot/systemd/system-generators/: systemd-bless-boot-generator  systemd-gpt-auto-generator  systemd-rc-local-generator  systemd-run-generator
02_source_code/tools/sysroot/udev/: ata_id  hid2hci  scsi_id
02_source_code/tools/sysroot/usr/include/: asm  auxvec.h  bits  bitsperlong.h  bpf_perf_event.h  byteorder.h  errno.h  expat.h  fcntl.h  gnu  hwcap.h  ioctl.h  ioctls.h  ipcbuf.h  kvm_para.h  mman.h  msgbuf.h  param.h  perf_regs.h  posix_types.h  ptrace.h  resource.h  sembuf.h  setup.h  shmbuf.h  siginfo.h  signal.h  socket.h  sockios.h  stat.h  statfs.h  swab.h  sys  termbits.h  termios.h  types.h  (+2 more)
02_source_code/tools/sysroot/valgrind/: callgrind-arm-linux  default.supp  exp-dhat-arm-linux  helgrind-arm-linux  lackey-arm-linux  none-arm-linux
02_source_code/tools/sysroot/vnc/: get_primary_ip4  vncservice
(+641 files in other folders)
